--- a/src/styles.css
+++ b/src/styles.css
@@ -18,13 +18,6 @@ h2 {
   text-transform: capitalize;
 }
 
-h3 {
-  font-size: 80px;
-  text-align: right;
-  position: relative;
-  right: -20px;
-}
-
 h4 {
   font-size: 25px;
   margin-bottom: 15px;
@@ -47,6 +40,10 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .card-title {
@@ -79,13 +76,17 @@ li {
 }
 
 .current-weather-icon {
-  width: 170px;
-  height: 170px;
+  width: 150px;
+  height: 150px;
+  margin-top: 30px;
+}
+
+#currentTemperature {
+  font-size: 75px;
 }
 
 .temperature-data {
   text-align: right;
-  margin-top: 10px;
 }
 
 #forecast p {
@@ -102,9 +103,9 @@ li {
 .temp-weekday {
   font-size: 20px;
 }
+
 .units {
-  font-size: 25px;
+  font-size: 17px;
   position: relative;
-  top: -38px;
-  right: 18px;
+  top: -40px;
 }
