--- a/src/styles.css
+++ b/src/styles.css
@@ -89,19 +89,23 @@ a {
   margin-top: 0px;
 }
 
-#forecast p {
-  font-size: 18px;
-  color: #2b2a2a;
-}
-
 .weather-icon {
   height: 70px;
   width: 70px;
   margin-bottom: 10px;
   color: #27527a;
 }
-.temp-weekday {
+
+.weather-forecast {
+  text-align: center;
+}
+
+#forecast {
+  font-size: 25px;
+}
+.forecast-temp {
   font-size: 20px;
+  color: #353535;
 }
 
 .units {
